2004-07-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CreateConditionMask):
	renamed CurrentGlobbalPageAnyDesk to CurrentGlobalPageAnyDesk

2004-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (RestoreWithdrawnLocation):
	fixed traveling windows if application changed gravity hint before
	recapture

2004-06-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (CheckActionType):
	(execute_complex_function):
	fixed double click patch

2004-05-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (CheckActionType):
	(execute_complex_function):
	double clicks no longer work when pressing different buttons

2004-04-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (NewMenuRoot):
	do not strip whitespace from menu names when creating a new menu

2004-04-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (GetDeskNumber):
	(CMD_GotoDesk):
	(CMD_MoveToDesk):
	fixed MoveToDesk with one argument

2004-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_frame_attributes):
	fixed BackingStore code and removed now useless backing store for
	decorations

2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* NEWS:
	set version to 2.4.19
	released 2.4.18

	* NEWS:
	* fvwm/fvwm2.1:
	updated for 2.4.17

2004-02-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	(moveLoop):
	fixed the FlickeringMoveWorkaround option which did nothing before

2003-10-11  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* NEWS:
	set the version to 2.4.18

2003-10-10  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	documented fvwm-menu-headlines changes

	* NEWS:
	* docs/ANNOUNCE:
	* docs/fvwm.lsm.in:
	* fvwm/fvwm2.1:
	prepare for 2.4.17

2003-09-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (MoveViewport):
	do not broadcast M_NEW_PAGE if the page did not change

2003-09-03  Mikhael Goikhman  <migo@homemail.com>

	* acinclude.m4: